--- a/odin-foundations-js-pt2-replit-exercises/01-replit-troubleshooting/index.html
+++ b/odin-foundations-js-pt2-replit-exercises/01-replit-troubleshooting/index.html
@@ -8,7 +8,28 @@
   <title>repl.it: Troubleshooting</title>
 </head>
 <body>
-  
+  <p><strong>01: Troubleshooting</strong> - - - <a target="_blank" href="https://replit.com/@I3uckwheat/troubleshooting#troubleshooting.js">view on repl.it</a></p>
+  <p>Check console to see logs.</p>
+
   <script src="troubleshooting.js"></script>
+  <script>
+    // I get it, you're curious, 
+    // but it's OK if you don't understand what's going on in here, you'll learn it in time.
+
+    //const abTroubleshoot = require("./troubleshooting");
+    //const result = abTroubleshoot();
+
+    const result = troubleshooting();
+
+    if (result === 2) {
+      console.log("Congrats! You got the correct answer");
+    } else if (typeof result === 'number') {
+      console.log(`You returned the number ${result}, the result should be the number 2`);
+    } else {
+      console.log(`You returned string "${result}", the result should be the number 2`);
+    }
+
+  </script>
+
 </body>
 </html>
