--- a/odin-foundations-js-pt2-replit-exercises/03-replit-lets-do-some-math/index.html
+++ b/odin-foundations-js-pt2-replit-exercises/03-replit-lets-do-some-math/index.html
@@ -8,10 +8,48 @@
   <title>repl.it: Let's do some Math</title>
 </head>
 <body>
-
+  <p><strong>03: Let's do some Math</strong> - - - <a target="_blank" href="https://replit.com/@I3uckwheat/lets-do-some-math#math.js">view on repl.it</a></p>
+  <p>Check console to see logs.</p>
   <script src="math.js"></script>
 
   <script>
+
+    //const {a, b, c, d, e} = require("./math");
+
+    if(a === 9) {
+      console.log("'a' is correct!")
+    } else {
+      console.log(`'a' is incorrect, got ${a}, expected 9`)
+    }
+    console.log("\n");
+
+    if(b === 66) {
+      console.log("'b' is correct!")
+    } else {
+      console.log(`'b' is incorrect, got ${b}, expected 66`)
+    }
+    console.log("\n");
+
+    if(c === 1) {
+      console.log("'c' is correct!")
+    } else {
+      console.log(`'c' is incorrect, got ${c}, expected 1`)
+    }
+    console.log("\n");
+
+    if(d === -8) {
+      console.log("'d' is correct!")
+    } else {
+      console.log(`'d' is incorrect, got ${d}, expected -8`)
+    }
+    console.log("\n");
+
+    if(e === 68) {
+      console.log("'e' is correct!")
+      console.log("\n Congrats! You've solved them all, you may move onto the next lesson")
+    } else {
+      console.log(`'e' is incorrect, got ${e}, expected 68`)
+    }
 
   </script>
   
