--- a/odin-foundations-js-pt3-functions/index.html
+++ b/odin-foundations-js-pt3-functions/index.html
@@ -12,7 +12,10 @@
   <script>
     // 01
     // Write a function called add7 that takes one number and returns that number + 7.
-
+    function add7(number) {
+      return typeof number === 'number' ? number + 7 : 'Enter a number';
+    }
+ 
     // 02
     // Write a function called multiply that takes 2 numbers and returns their product.
 
