Created function: multiply(numX, numY)

--- a/odin-foundations-js-pt3-functions/index.html
+++ b/odin-foundations-js-pt3-functions/index.html
@@ -18,6 +18,10 @@
  
     // 02
     // Write a function called multiply that takes 2 numbers and returns their product.
+    function multiply(numX, numY) {
+      return typeof numX === 'number' && typeof numY === 'number'
+      ? numX * numY : 'Enter two numbers';
+    }
 
     // 03
     // Write a function called capitalize that takes a string and returns that string 
